--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,17 +7,17 @@
     <li><%= link_to "Users", admins_path%></li>
     <li><%= link_to "Pages", pages_path%></li>
     <li><%= link_to "All Posts", home_all_postings_path %></li>
-     <li><%= link_to "Payement Transfer", payement_transfers_path %></li>
+     <!-- <li><%#= link_to "Payement Transfer", payement_transfers_path %></li> -->
     <li> <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %> </li>
   <%# end %>
   <% elsif user_signed_in? %>
   
   	<li> <%= link_to 'My Post', posts_path %> </li>
-    <li><%= link_to "All Posts", all_posts_path %></li>
+    <li><%= link_to "All Posts", posts_overview_path %></li>
     <li><%= link_to "Personal Information", edit_user_path(current_user)%></li>
      <li><%= link_to "Change Password", edit_user_registration_path%></li>
-     <li><%= link_to "My Booking", bookings_path %></li>
-     <li><%= link_to "Bank Details", bank_details_path%></li>
+     <!-- <li><%#= link_to "My Booking", bookings_path %></li>
+     <li><%#= link_to "Bank Details", bank_details_path%></li>  -->
        <li>
       <%= link_to "Messages",{:controller => 'messages',:action => 'is_read_all', :id =>current_user.id,:method => :post} rescue nil%>
        <li id="responsecontainer">
