--- a/app/views/messages/compose_message.html.erb
+++ b/app/views/messages/compose_message.html.erb
@@ -1,6 +1,6 @@
 <div style="width:40%;"><h4> New Message</h4></div>
 
-<%= form_for(@message, :url => {:controller=>"messages", :action=>"sent_to"}) do |f| %>
+<%= form_for(@message, :url => {:controller=>"messages", :action=>"sent_to"}, :remote=> true) do |f| %>
   <% if @message.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@message.errors.count, "error") %> prohibited this message from being saved:</h2>
