--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,94 @@
-  <script type="text/javascript">
+<style>
+.left
+{
+width:485px;
+height:325px;
+margin:auto;
+float:left;
+  }
+.right
+{
+width:451px;
+height:325px;
+margin:auto;
+float:left;
+  }
+.left1
+{
+width:485px;
+height:auto;
+margin:auto;
+float:left;
+  }
+
+.right1 { width:451px; height:auto; margin:auto; float:left;}
+
+#map-canvas { height: 100%; margin: 0px; padding: 0px }
+
+ </style>
+
+
+
+   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
+    <script>
+      function initialize() {
+
+        // Create an array of styles.
+        var styles = [
+          {
+            stylers: [
+              { hue: "#00b4ff" },
+              { saturation: 50 }
+            ]
+          },{
+            featureType: "road",
+            elementType: "geometry",
+            stylers: [
+              { hue: "#28A0E5" },
+              { visibility: "simplified" }
+            ]
+          },{
+            featureType: "road",
+            elementType: "labels",
+            stylers: [
+              { visibility: "off" }
+            ]
+          }
+        ];
+
+        // Create a new StyledMapType object, passing it the array of styles,
+        // as well as the name to be displayed on the map type control.
+        var styledMap = new google.maps.StyledMapType(styles, {name: "Styled Map"});
+
+        var myLatlng = new google.maps.LatLng(<%= @post.latitude %>,<%= @post.longitude %>);
+        var mapOptions = {
+          zoom: 12,
+          center: myLatlng
+        }
+        
+          var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+
+          var marker = new google.maps.Marker({
+              position: myLatlng,
+              map: map,
+              mapTypeControlOptions: {
+                mapTypeIds: [google.maps.MapTypeId.ROADMAP, 'map_style']
+              }
+          });
+
+          //Associate the styled map with the MapTypeId and set it to display.
+          map.mapTypes.set('map_style', styledMap);
+          map.setMapTypeId('map_style');
+
+      }
+
+
+
+      google.maps.event.addDomListener(window, 'load', initialize);
+
+      </script>
+
+      <script type="text/javascript">
 
     jQuery(function($){
       $("#booking_dropoff_date").datepicker({dateFormat: 'yy-mm-dd', showOn: 'button', buttonImage: '/assets/calendar.gif', buttonImageOnly: true})
@@ -10,8 +100,8 @@
   </script>
 
 <script src="https://checkout.stripe.com/checkout.js"></script>
-<%= stylesheet_link_tag 'bookreviews.css','font-awesome.css'%>
-<%= javascript_include_tag "jquery-1.4.2.min","jquery.validate.min","validation" %>
+<%= stylesheet_link_tag 'bookreviews.css','font-awesome.css', "facebox.css" %>
+<%= javascript_include_tag "jquery-1.4.2.min","jquery.validate.min","validation", "facebox.js" %>
 
 <script type='text/javascript'>//<![CDATA[ 
 
@@ -135,111 +225,131 @@ jQuery(document).ready(function(){
 </script>
 
 
-<table width="100%">
-<tr>
-<% if @post.overall_rating > 0 %>
-     <p>
-        <% num_stars(@post.overall_rating)[:full].times do %>
-          <i class="fa fa-star"></i>
-        <% end %>
-        <% num_stars(@post.overall_rating)[:half].times do %>
-          <i class="fa fa-star-half-o"></i>
-        <% end %>
-        <% num_stars(@post.overall_rating)[:empty].times do %>
-          <i class="fa fa-star-o"></i>
-        <% end %>
-        <%= "(" + pluralize(@post.comments.count.to_s, "") + ")" if @post.comments.count > 0 %>
-     </p>
-<% end %>
 
-	<td><%= image_tag(@post.photo.url(:medium)) %> <br/>
-   <strong>Name : </strong> <%= @post.user.name rescue nil %> <%= @post.user.last_name rescue nil %><br/>
-		<strong>Price : </strong> $ <%= @post.price_sq_ft %> /Sq.ft <br/>
 
-    <% if @post.drop_off %>
-      <strong>Drop-Off : </strong> <%= @post.price_include_drop_off %> <br/>
-      <strong>Drop-Off Avaibilty Date : </strong><%= @post.drop_off_avaibility_start_date.strftime("%d-%m-%Y") %> -  <%= @post.drop_off_avaibility_end_date.strftime("%d-%m-%Y") %><br/>
-    <% end %>
-
-    <% if @post.pick_up == true %> 
-      <strong>Pick-Up Avaibilty Date : </strong> <%= @post.pick_up_avaibilty_start_date.strftime("%d-%m-%Y") %> - <%= @post.pick_up_avaibility_end_date.strftime("%d-%m-%Y") %><br/>
-      <strong>Pick-Up : </strong> <%= @post.price_include_pick_up %> <br/>
-    <% end %>
-		
-		
-	</td>
-	<td></td>
-</tr>
-
-<tr>
-  <td>
-    <input type='hidden' name='price' id='price' value='<%= @post.price_sq_ft %>' /> <br />
-
-    <input type='hidden' name='dropoff' id='dropoff' value='<%= @post.price_include_drop_off ? @post.price_include_drop_off : 0 %>' />
-    <input type='hidden' name='pickup' id='pickup' value='<%= @post.price_include_pick_up ? @post.price_include_pick_up : 0  %>' />
-    <input type="checkbox" id="checkbox1" /> Drop Off <br />
-    <input type="checkbox" id="checkbox2" /> Pick Up <br />
+    <div class="left"> <div id="map-canvas"></div> </div>
     
-
-
+    <div class="right"><%= image_tag(@post.photo.url(:medium), :style => "width:474px") %></div>
     
-    <%= form_for :booking, :url=>{:controller=>'bookings',:action=>'checkout'}, :html=>{ :id=>"booking"} do |f| %>
-      <%= text_field_tag :area %>
-      <%= f.hidden_field :post_id, :value => @post.id %>
-      <%= f.hidden_field :poster_id, :value=> @post.user_id %><br/>
-      <%= f.hidden_field :posting_dropoff_date, :value=> @post.drop_off_avaibility_end_date %>
-      Area :<%= f.hidden_field :price, :value => "" %> <br/>
+    <div class="left1">
 
-      Drop Off Date : <%= f.text_field :dropoff_date %> <br/>
-      
-      Pick Up Date : <%= f.text_field :pickup_date %> <br/>
-     
+      <% if @post.overall_rating > 0 %>
+         <p>
+            <% num_stars(@post.overall_rating)[:full].times do %>
+              <i class="fa fa-star"></i>
+            <% end %>
+            <% num_stars(@post.overall_rating)[:half].times do %>
+              <i class="fa fa-star-half-o"></i>
+            <% end %>
+            <% num_stars(@post.overall_rating)[:empty].times do %>
+              <i class="fa fa-star-o"></i>
+            <% end %>
+            <%= "(" + pluralize(@post.comments.count.to_s, "") + ")" if @post.comments.count > 0 %>
+         </p>
+      <% end %>
 
-      <%= f.submit "Book", :class => "btn btn-primary contact-form", :id=>"customButton" %>
-    <% end %>
-    <div id="total"></div> <div id="cut_off"></div>
+      <%if current_user.present?%>
+          <h3>Post your comment</h3>
+          <%= form_for [@post, Comment.new] ,:html=>{ id: "new_comment"} do |f| %>
+          <%= f.hidden_field :user_id, :value=> current_user.id %>
+              <fieldset class="rating">
+              <%= f.radio_button(:rating, "5") %><%= f.label(:rating.to_s + "_5") %>
+              <%= f.radio_button(:rating, "4") %><%= f.label(:rating.to_s + "_4") %>
+              <%= f.radio_button(:rating, "3") %><%= f.label(:rating.to_s + "_3") %>
+              <%= f.radio_button(:rating, "2") %><%= f.label(:rating.to_s + "_2") %>
+              <%= f.radio_button(:rating, "1") %><%= f.label(:rating.to_s + "_1") %>
+             </fieldset><br><br><br>
+         <strong>Comment : </strong><%= f.text_area :comments ,:cols=>"30", :rows=>"4" %>
+         <p ><%= f.submit "Add comment", :class => "btn btn-primary contact-form" %></p>
+         <% end %>
+      <% end %>
+
+        <div id="ref_comment"> </div>
+
+    </div>
     
-  </td>
+    <div class="right1">
 
-</tr>
-
-</table>
-
+              <table width="100%">
+              <tr>
 
 
+                <td>
+                  <i> $ <%= @post.price_sq_ft %> /Sq.ft for entire duration</i> <br/>
+                 <strong> <%= @post.user.name rescue nil %> <%= @post.user.last_name rescue nil %> </strong><br/>
+                  
+                  <%= @post.address %><br/>
+                  <div id="message_<%= @post.id %>">
+                    <%= link_to "Send Message ", compose_message_messages_path(:user_id => @post.user_id,:post_id => @post.id ), :remote=>true %><br/>
+
+                  <% if @post.drop_off %>
+                    <strong>Drop-Off : </strong> <%= @post.price_include_drop_off %> <br/>
+                    <strong>Drop-Off Avaibilty Date : </strong><%= @post.drop_off_avaibility_start_date.strftime("%d-%m-%Y") %> -  <%= @post.drop_off_avaibility_end_date.strftime("%d-%m-%Y") %><br/>
+                  <% end %>
+
+                  <% if @post.pick_up == true %> 
+                    <strong>Pick-Up Avaibilty Date : </strong> <%= @post.pick_up_avaibilty_start_date.strftime("%d-%m-%Y") %> - <%= @post.pick_up_avaibility_end_date.strftime("%d-%m-%Y") %><br/>
+                    <strong>Pick-Up : </strong> <%= @post.price_include_pick_up %> <br/>
+                  <% end %>
+                  
+                  
+                </td>
+                <td></td>
+              </tr>
+
+              <tr>
+                <td>
+                  <input type='hidden' name='price' id='price' value='<%= @post.price_sq_ft %>' /> <br />
+
+                  <input type='hidden' name='dropoff' id='dropoff' value='<%= @post.price_include_drop_off ? @post.price_include_drop_off : 0 %>' />
+                  <input type='hidden' name='pickup' id='pickup' value='<%= @post.price_include_pick_up ? @post.price_include_pick_up : 0  %>' />
+                  <input type="checkbox" id="checkbox1" /> Drop Off <br />
+                  <input type="checkbox" id="checkbox2" /> Pick Up <br />
+                  
 
 
-<form action="/charge" method="POST">
-  <script
-    src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-    data-key="pk_test_6pRNASCoBOKtIshFeQd4XMUh"
-    data-image="/square-image.png"
-    data-name="Demo Site"
-    data-description="2 widgets ($20.00)"
-    data-amount="2000">
-  </script>
-</form>
+                  
+                  <%= form_for :booking, :url=>{:controller=>'bookings',:action=>'checkout'}, :html=>{ :id=>"booking"} do |f| %>
+                    <%= text_field_tag :area %>
+                    <%= f.hidden_field :post_id, :value => @post.id %>
+                    <%= f.hidden_field :poster_id, :value=> @post.user_id %><br/>
+                    <%= f.hidden_field :posting_dropoff_date, :value=> @post.drop_off_avaibility_end_date %>
+                    Area :<%= f.hidden_field :price, :value => "" %> <br/>
+
+                    Drop Off Date : <%= f.text_field :dropoff_date %> <br/>
+                    
+                    Pick Up Date : <%= f.text_field :pickup_date %> <br/>
+                   
+
+                    <%#= f.submit "Book", :class => "btn btn-primary contact-form", :id=>"customButton" %>
+                  <% end %>
+                  <div id="total"></div> <div id="cut_off"></div>
+                  
+                </td>
+
+              </tr>
+
+              </table>
+
+              <!-- <form action="/charge" method="POST">
+                <script
+                  src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                  data-key="pk_test_6pRNASCoBOKtIshFeQd4XMUh"
+                  data-image="/square-image.png"
+                  data-name="Demo Site"
+                  data-description="2 widgets ($20.00)"
+                  data-amount="2000">
+                </script>
+              </form> -->
 
 
+    </div>
 
-<%if current_user.present?%>
-    <h3>Post your comment</h3>
-    <%= form_for [@post, Comment.new] ,:html=>{ id: "new_comment"} do |f| %>
-    <%= f.hidden_field :user_id, :value=> current_user.id %>
-        <fieldset class="rating">
-        <%= f.radio_button(:rating, "5") %><%= f.label(:rating.to_s + "_5") %>
-        <%= f.radio_button(:rating, "4") %><%= f.label(:rating.to_s + "_4") %>
-        <%= f.radio_button(:rating, "3") %><%= f.label(:rating.to_s + "_3") %>
-        <%= f.radio_button(:rating, "2") %><%= f.label(:rating.to_s + "_2") %>
-        <%= f.radio_button(:rating, "1") %><%= f.label(:rating.to_s + "_1") %>
-       </fieldset><br><br><br>
-   <strong>Comment : </strong><%= f.text_area :comments ,:cols=>"30", :rows=>"4" %>
-   <p ><%= f.submit "Add comment", :class => "btn btn-primary contact-form" %></p>
-   <% end %>
-<% end %>
 
   
 
-  <div id="ref_comment"> </div>
+
+
+
 
     
