--- a/app/views/posts/archive.html.erb
+++ b/app/views/posts/archive.html.erb
@@ -1,5 +1,5 @@
 
-<p><%= link_to "My Post", posts_path %> | <%= link_to "Archive Post", archive_posts_path %></p><br/>
+<p><%= link_to "My Post", posts_path %> | <%= link_to "Archived Post", archive_posts_path %></p><br/>
 
 <h4>Archive Posts</h4>
 
