Browsing and searching posting

--- a/app/views/posts/_overviews.html.erb
+++ b/app/views/posts/_overviews.html.erb
@@ -13,9 +13,15 @@
 
 <div class="box1">
  <a onmouseout="hover.out(<%= index+x %>)" onmouseover="hover.over(<%= index+x %>)" href="<%= post_path(post) %>" id="m<%= post.id %>">
-  <%= post.user.name rescue nil%> <%= post.user.last_name rescue nil%>  Area: <%= post.area %> Price : <%= post.price_sq_ft %> <br/>
-  Address : <%= post.address %>   <%= params[:search] ?  params[:search][:miles].present? && params[:search][:address].present? ? " | ( #{post.distance.round(2)} ) miles" : '' : '' %>
+ 	<div style="float:left; width:100px;"><% if post.photo.url(:thumb) == "/photos/thumb/missing.png" %>
+        <%= image_tag "default_post_small.png" %>
+    <% else %>
+        <%= image_tag(post.photo.url(:thumb)) %>
+   <% end %></div>
+  <div style="float:left; width:275px;"><%= post.user.name rescue nil%> <%= post.user.last_name rescue nil%>  Area: <%= post.area %> Price : <%= post.price_sq_ft %> <br/>
+  Address : <%= post.address %>   <%= params[:search] ?  params[:search][:miles].present? && params[:search][:address].present? ? " | ( #{post.distance.round(2)} ) miles" : '' : '' %></div>
 
  </a><br>
 </div>
 <% end %>
+
