--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -229,7 +229,13 @@ jQuery(document).ready(function(){
 
     <div class="left"> <div id="map-canvas"></div> </div>
     
-    <div class="right"><%= image_tag(@post.photo.url(:medium), :style => "width:474px") %></div>
+    <div class="right">
+      <% if @post.photo.url(:medium) == "/photos/medium/missing.png" %>
+        <%= image_tag "default_post_large.png", :style => "width:474px" %>
+      <% else %>
+        <%= image_tag(@post.photo.url(:medium), :style => "width:474px") %>
+      <% end %>
+    </div>
     
     <div class="left1">
 
