--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,7 +6,11 @@
   <% if user_signed_in? && signed_in? && current_user.admin?  %>
     <li><%= link_to "Users", admins_path%></li>
     <li><%= link_to "Pages", pages_path%></li>
+    <li><%= link_to "Add Subject",new_contactu_path%></li>
+    <li><%=  link_to "Add faqs",new_faq_path%></li>
+    <li><%= link_to 'Add About Us', new_about_u_path %></li>
     <li><%= link_to "All Posts", home_all_postings_path %></li>
+
      <!-- <li><%#= link_to "Payement Transfer", payement_transfers_path %></li> -->
     <li> <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %> </li>
   <%# end %>
@@ -32,7 +36,9 @@
     <li> <%= link_to 'Sign in', new_user_session_path %> </li>
     <li> <%= link_to 'Sign up', authenticates_path %> </li>
     <li><a class="btns btn-social-icon btn-facebook" href="/users/auth/facebook">Facebook<i class="fa fa-facebook"></i></a></li>
+    <li><%= link_to 'About Us',about_us_path%></li>
      <li> <%= link_to 'Contact us', home_contactus_path %> </li>
+     <li><%= link_to 'FAQs',faqs_path%></li>
   <% end %>
 </ul>
 
