Searching on home page

--- a/app/views/about_us/index.html.erb
+++ b/app/views/about_us/index.html.erb
@@ -1,5 +1,5 @@
 <%if signed_in?%>
-<h1>Listing about_us</h1>
+<h1>About Us</h1>
 
 <table>
   <thead>
@@ -25,7 +25,7 @@
 
 <br>
 
-<%= link_to 'New About us', new_about_u_path %>
+<%= link_to 'New', new_about_u_path %>
 
 <br>
 <%else%>
