--- a/app/views/about_us/_form.html.erb
+++ b/app/views/about_us/_form.html.erb
@@ -20,6 +20,6 @@
     <%= f.file_field :photo %>
     </p>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Save", :class=>"btn btn-primary" %>
   </div>
 <% end %>
