--- a/app/views/home/search_post.html.erb
+++ b/app/views/home/search_post.html.erb
@@ -10,11 +10,11 @@
 "No Results Found!!"
 <%else%>
 
-<%if start_date > end_date%>
+<%if @start_date > @end_date %>
 
 <%= render "home/search_date"%>
 
-  <%elsif start_date.blank? || end_date.blank?%>
+  <%elsif @start_date.blank? || @end_date.blank?%>
 
  <%= render "home/search_date"%>
 
