--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,9 +6,9 @@
   <% if user_signed_in? && signed_in? && current_user.admin?  %>
     <li><%= link_to "Users", admins_path%></li>
     <li><%= link_to "Pages", pages_path%></li>
-    <li><%= link_to "Add Subject",new_contactu_path%></li>
-    <li><%=  link_to "Add faqs",new_faq_path%></li>
-    <li><%= link_to 'Add About Us', new_about_u_path %></li>
+    <li><%= link_to "Contact Subject",contactus_path%></li>
+    <li><%=  link_to "faqs",faqs_path%></li>
+    <li><%= link_to 'About Us', about_us_path %></li>
     <li><%= link_to "All Posts", home_all_postings_path %></li>
 
      <!-- <li><%#= link_to "Payement Transfer", payement_transfers_path %></li> -->
