--- a/app/views/about_us/_form.html.erb
+++ b/app/views/about_us/_form.html.erb
@@ -12,13 +12,21 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :content %><br>
-    <%= f.text_area :content %>
+      <%= f.label :name %>
+      <%= f.text_field :name %>
   </div>
-    <p>
-    <%= f.label :Photo %>
-    <%= f.file_field :photo %>
-    </p>
+
+  <div class="field">
+      <%= f.label :Photo %>
+      <%= f.file_field :photo %>
+  </div><br/>
+
+  <div class="field">
+    <%= f.label :content %>
+    <%= f.text_area :content, :style=>"width:300px; height: 125px;" %>
+  </div>
+
+
   <div class="actions">
     <%= f.submit "Save", :class=>"btn btn-primary" %>
   </div>
