--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,7 +7,7 @@
     <li><%= link_to "Users", admins_path%></li>
     <li><%= link_to "Pages", pages_path%></li>
     <li><%= link_to "Contact Subject",contactus_path%></li>
-    <li><%=  link_to "faqs",faqs_path%></li>
+    <li><%=  link_to "Faqs",faqs_path%></li>
     <li><%= link_to 'About Us', about_us_path %></li>
     <li><%= link_to "All Posts", home_all_postings_path %></li>
 
