--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -5,11 +5,11 @@
  
   <% if user_signed_in? && signed_in? && current_user.admin?  %>
     <li><%= link_to "Users", admins_path%></li>
-    <li><%= link_to "Pages", pages_path%></li>
-    <li><%= link_to "Contact Subject",contactus_path%></li>
-    <li><%=  link_to "Faqs",faqs_path%></li>
-    <li><%= link_to 'About Us', about_us_path %></li>
-    <li><%= link_to "All Posts", home_all_postings_path %></li>
+    <li><%= link_to "Manage Subject(contact)",contactus_path%></li>
+    <!-- <li><%#=  link_to "Manage Faqs",faqs_path%></li> -->
+    <li><%= link_to 'Manage About Us', about_us_path %></li>
+    <li><%= link_to "Manage All Posts", home_all_postings_path %></li>
+    <li><%=  link_to "College ID",access_ids_path%></li>
 
      <!-- <li><%#= link_to "Payement Transfer", payement_transfers_path %></li> -->
     <li> <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %> </li>
